--- a/project1/assets/styles.css
+++ b/project1/assets/styles.css
@@ -136,23 +136,32 @@ a:visited {
     font-size: 30px;
     letter-spacing: 6px;
     margin-top: 64px;
-    margin-right: 553px;
     width: 365px;
     overflow: auto;
     white-space: nowrap;
 }
 
-.samples a {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
+
+.samples::-webkit-scrollbar {
+    width: 365px;
+    height: 10px;
+    
 }
 
-.samples a:hover {
-  background-color: #777;
+.samples::-webkit-scrollbar-track {
+    background-clip: content-box;
+    border: 4px solid white;
+    background: black;
 }
+
+.samples::-webkit-scrollbar-thumb {
+    background-color: #AD0000;
+}
+
+.samples::-webkit-scrollbar-thumb:hover{
+    background-color: #780000;
+}
+
 /******* Sources *******/
 
 .sources h3, .sources p {
