--- a/project2/assets/style.css
+++ b/project2/assets/style.css
@@ -7,33 +7,62 @@ body {
     height: 768px;
     width: 1024px;
     margin: 0 auto;
-    background-color: aliceblue;
+    background-color: #AEC3CC;
+    font-family: 'Poppins', 'sans-serif';
+
 }
 
+
+
 .header {
-    height: 100px;
-    width: 600px;
-    background-color: lightgreen;
-    margin-top: 130px;
-    margin-left: 212px;
+    height: 43px;
+    width: 422px;
+    background-color: #E9C101;
+    top: 218px;
+    left: 301px;
     text-align: center;
+    position: relative;
+}
+
+.circle {
+    width: 68px;
+    height: 68px;
+    background-color: #1E425C;
+    border-radius: 50%;
+    position: absolute;
+    left: 508px;
+    top: 181px;
+    z-index: 1;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 90px;
+    color: white;
+    letter-spacing: 10px;
+    position: absolute;
+    top: -70px;
 }
 
 .startbuttons{
     text-align: center;
-    margin-top: 62px;
+    margin-top: 323px;
 }
 
 button {
-    background-color: lightpink;
+    background-color: #D49B92;
     height: 72px;
-    width: 240px;
-    margin-top: 43px;
-    font-size: 18px;
+    width: 303px;
+    margin-top: 61px;
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    border-style: none;
 }
 
 button:hover {
-    background-color: hotpink;
+    background-color: #1E425C;
+    cursor: pointer;
 }
 
 .levels{
@@ -52,19 +81,86 @@ button:hover {
     margin-bottom: 20px;
 }
 
-#xout {
-    height: 30px;
-    width: 30px;
+.blackout{
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: rgb(0,0,0,0.7)
+}
+
+.box{
+    width: 534px;
+    height: 491px;
+    background-color: #1E425C;
+    left: 245px;
+    text-align: center;
+    position: absolute;
+    top: 139px;
+    z-index: 40;
+    border: 3px solid #A6C2CE;
+}
+
+.bar{
+    width: 350px;
+    height: 17px;
+    background-color: #E9C101;
+    position: absolute;
+    left: 92px;
+    top: 81px;
+    z-index: -2;
+}
+
+.boxtitle {
+    margin-top: 40px;
+    margin-bottom: 50px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
+
+#mod{
+    width: 241px;
+    height: 72px;
+    font-size: 28px;
+    font-weight: bold;
+    border-style: none;
+    margin-left: 0px;
+    margin-bottom: 33px;
+}
+
+#mod:hover{
+    background-color: #E9C101;
+    cursor: pointer;
+}
+
+.close {
+    height: 43px;
+    width: 43px;
     position: absolute;
     text-align: center;
-    right: 20px;
-    top: -25px;
+    left: 510px;
+    top: -20px;
+    border-radius: 50%;
+    font-weight: none;
+    border-style: none;
+    font-size: 30px;
+    color: white;
+    background-color: #D49B92;
+    float: right;
     
 }
 
-#xout:hover{
-    background-color: hotpink;
+.close:hover, .close:focus{
+    background-color: #E9C101;
+    cursor: pointer;
 }
+
 
 .modal-content{
     visibility: hidden;
