--- a/project2/assets/stylegame.css
+++ b/project2/assets/stylegame.css
@@ -2,20 +2,88 @@
     margin:0;
     padding: 0;
 }
+
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: #A6C2CE;
+    height: 768px;
+    width: 1024px;
+}
+
+/****   DECOR   ****/
+
+
+.grid{
+    width:21px;
+    height: 21px;
+    background-color: rgba(255,255,255,.2);
+    border-color: #D8E6EF;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.decorh{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1024px;
+    height: 69px;
+}
+
+/****  TITLE   ****/
+
+.sudoku{
+    font-weight: bold;
+    font-size: 90px;
+    color: white;
+    letter-spacing: 3px;
+    margin-left: 309px;
+    margin-top: 15px;
+}
+
+.circle {
+    width: 68px;
+    height: 68px;
+    background-color: #1E425C;
+    border-radius: 50%;
+    position: absolute;
+    left: 504px;
+    top: 47px;
+    z-index: 1;
 }
 
 .header {
-    width:100%;
-    height:100px;
-    background-color: lightgreen;
-    margin-bottom: 40px;
+    width:407px;
+    height:37px;
+    background-color: #E9C101;
+    margin-bottom: 34px;
     text-align: center;
-    font-size: 20px;
-    margin-top: 70px;
-;
+    font-size: 25px;
+    margin-top: -15px;
+    color: white;
+    font-weight: none;
+    letter-spacing: 6px;
+    margin-left: 309px;
 }
+
+.title{
+    font-size:50px;
+    font-weight: bold;
+    color: white;
+    letter-spacing: 2px;
+    margin-left: 311px;
+    margin-top: 47px;
+}
+
+.header2{
+    width: 420px;
+    height: 18px;
+    margin-left: 300px;
+    background-color: #E9C101;
+    margin-top: -30px
+
+}
+
+/****  SUDOKU  ****/
 
 .large-square {
     
@@ -29,37 +97,239 @@ body {
 .small-square {
     width:50px;
     height: 50px;
-    background-color: lightpink;
     border:.5px solid ;
+    border-color: #A6C2CE;
     color: black;
-      
+    z-index: 30;
+    cursor: pointer;
+}
+
+.cycle-slideshow{
+    position: absolute;
+    z-index: 20;
+    margin: 0 auto;
+    padding: 0;
+    margin-left: -5px;
+}
+
+/*positions*/
+
+/*b*/
+.analysis1-2,
+.analysis1-5,
+.analysis1-8,
+.analysis4-2,
+.analysis4-5,
+.analysis4-8,
+.analysis7-2,
+.analysis7-5,
+.analysis7-8{
+    left: 50px;
+    cursor: pointer;
+}
+
+/*c*/
+.analysis1-3,
+.analysis1-6,
+.analysis1-9,
+.analysis4-3,
+.analysis4-6,
+.analysis4-9,
+.analysis7-3,
+.analysis7-6,
+.analysis7-9{
+    left: 103px;
+}
+
+/*d*/
+
+/*e*/
+.analysis2-2,
+.analysis2-5,
+.analysis2-8,
+.analysis5-2,
+.analysis5-5,
+.analysis5-8,
+.analysis8-2,
+.analysis8-5,
+.analysis8-8{
+    left: 208px
+}
+
+/*f*/
+.analysis2-3,
+.analysis2-6,
+.analysis2-9,
+.analysis5-3,
+.analysis5-6,
+.analysis5-9,
+.analysis8-3,
+.analysis8-6,
+.analysis8-9{
+    left: 260px;
+}
+
+/*g*/
+
+/*h*/
+.analysis3-2,
+.analysis3-5,
+.analysis3-8,
+.analysis6-2,
+.analysis6-5,
+.analysis6-8,
+.analysis9-2,
+.analysis9-5,
+.analysis9-8{
+    left: 363px;
+}
+
+/*i*/
+.analysis3-3,
+.analysis3-6,
+.analysis3-9,
+.analysis6-3,
+.analysis6-6,
+.analysis6-9,
+.analysis9-3,
+.analysis9-6,
+.analysis9-9{
+    left:415px;
+}
+
+/*2*/
+.analysis1-4,
+.analysis1-5,
+.analysis1-6,
+.analysis2-4,
+.analysis2-5,
+.analysis2-6,
+.analysis3-4,
+.analysis3-5,
+.analysis3-6{
+    top: 53px;
+}
+
+/*3*/
+.analysis1-7,
+.analysis1-8,
+.analysis1-9,
+.analysis2-7,
+.analysis2-8,
+.analysis2-9,
+.analysis3-7,
+.analysis3-8,
+.analysis3-9{
+    top: 103px;
+}
+
+/*4*/
+
+/*5*/
+.analysis4-4,
+.analysis4-5,
+.analysis4-6,
+.analysis5-4,
+.analysis5-5,
+.analysis5-6,
+.analysis6-4,
+.analysis6-5,
+.analysis6-6{
+    top:210px;
+    
+}
+
+/*6*/
+.analysis4-7,
+.analysis4-8,
+.analysis4-9,
+.analysis5-7,
+.analysis5-8,
+.analysis5-9,
+.analysis6-7,
+.analysis6-8,
+.analysis6-9{
+    top:260px;
+    
+}
+
+/*7*/
+
+/*8*/
+.analysis7-4,
+.analysis7-5,
+.analysis7-6,
+.analysis8-4,
+.analysis8-5,
+.analysis8-6,
+.analysis9-4,
+.analysis9-5,
+.analysis9-6{
+    top:365px;
+    
+}
+
+/*9*/
+.analysis7-7,
+.analysis7-8,
+.analysis7-9,
+.analysis8-7,
+.analysis8-8,
+.analysis8-9,
+.analysis9-7,
+.analysis9-8,
+.analysis9-9{
+    top:415px;
+    
 }
 
 .static {
-    background-color: lightgreen;
+/*    background-color: #2e5776;*/
     text-align: center;
     font-size: 30px;
-    color: black;
+    color: #E9C101;
+    font-style: bold;
+    cursor: auto;
 }
 
 #mammothsquare {
     display: flex;
     flex-wrap: wrap;
     width: 468px;
+    z-index: 2;
+    position: absolute;
+    margin-left: 24px;
+    margin-top: 24px;
 }
 
+.background{
+    width: 515px;
+    height: 571px;
+    background-color: #1E425C;
+    position: absolute;
+    z-index: 1;
+}
+
+/****  SIDE MENU   ****/
+
 button {
-    background-color: lightpink;
-    height: 50px;
-    width: 165px;
+    background-color: #D49B92;
+    height: 47px;
+    width: 181px;
     margin-bottom: 20px;
-    font-size: 18px;
+    font-size: 20px;
     margin-left: 30px;
+    color: white;
+    font-weight: bold;
+    border-style: none;
 }
 
 button:hover {
-    background-color: hotpink;
+    background-color: #1E425C;
+    cursor: pointer;
 }
+
+/****  COLUMNS  ****/
 
 .container{
     display: flex;
@@ -67,41 +337,98 @@ button:hover {
 }
 
 .column1{
-    width: 245px;
+    width: 255px;
 }
 
 .column3{
-    margin-top: 420px;
+    margin-top: 169px;
+    margin-left: 792px
+}
+
+/****   POP UP WINDOWS    ****/
+
+.blackout{
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 40;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: rgb(0,0,0,0.7)
 }
 
 .box{
-    width: 500px;
-    height: 350px;
-    background-color: lightyellow;
-    margin-left: 245px;
+    width: 534px;
+    height: 491px;
+    background-color: #1E425C;
+    left: 245px;
     text-align: center;
     position: absolute;
-    margin-top: 60px;
+    top: 139px;
+    z-index: 50;
+    border: 3px solid #A6C2CE;
+    color: white;
+    font-size: 20px;
+}
+
+.bar{
+    width: 370px;
+    height: 17px;
+    background-color: #E9C101;
+    position: absolute;
+    left: 80px;
+    top: 81px;
+    z-index: -2;
 }
 
 .boxtitle {
-    position:relative;
     margin-top: 40px;
     margin-bottom: 50px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 3px;
 }
 
-#xout {
-    height: 30px;
-    width: 30px;
+#mod{
+    width: 241px;
+    height: 72px;
+    font-size: 28px;
+    font-weight: bold;
+    border-style: none;
+    margin-left: 0px;
+    margin-bottom: 33px;
+}
+
+#mod:hover{
+    background-color: #E9C101;
+    cursor: pointer;
+}
+
+.close {
+    height: 43px;
+    width: 43px;
     position: absolute;
     text-align: center;
-    right: 20px;
-    top: -25px;
+    left: 510px;
+    top: -20px;
+    border-radius: 50%;
+    font-weight: none;
+    border-style: none;
+    font-size: 30px;
+    color: white;
+    background-color: #D49B92;
+    float: right;
+    z-index: 60;
     
 }
 
-#xout:hover{
-    background-color: hotpink;
+.close:hover, .close:focus{
+    background-color: #E9C101;
+    cursor: pointer;
+    z-index: 60;
 }
 
 .gif {
@@ -114,6 +441,10 @@ button:hover {
     height: 20px;
     border-radius: 50%;
     
+}
+
+#circle:hover{
+    background-color: #E9C101;
 }
 
 .buttonbottom {
@@ -135,3 +466,64 @@ button:hover {
 .modal-content2{
     visibility: hidden;
 }
+
+
+/****   INSTRUCTIONS PAGE   ****/
+
+.rulesbox{
+    width: 570px;
+    height: 360px;
+    background-color: #1E425C;
+    margin-top: 71px;
+    margin-left: 212px;
+    margin-bottom: 36px;
+    padding: 15px;
+    color: white;
+    overflow-y: scroll;
+    font-size: 17px;
+}
+
+.rulesbox::-webkit-scrollbar{
+    width: 13px;
+}
+
+.rulesbox::-webkit-scrollbar-track{
+    background-clip: content-box;
+    background: #1E425C;
+    position: fixed;
+    border-radius: 10px;
+}
+
+.rulesbox::-webkit-scrollbar-thumb {
+    background-color: #E9C101;
+    border-radius: 10px;}
+
+.buttonsinst{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left: 182px;
+}
+
+p{
+    margin: 6px;
+    padding-right: 15px;
+}
+
+h3{
+    font-style: none;
+    margin-bottom: 8px;
+    margin-top: 15px;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 25px;
+    letter-spacing: 1px;
+    margin-left: 6px;
+    color: #D49B92;
+
+}
+
+img{
+    display: inline-block;
+    align-content: center;
+    margin-left: 6px;
+}
+
