--- a/project2/assets/style.css
+++ b/project2/assets/style.css
@@ -3,6 +3,27 @@
     padding: 0;
 }
 
+
+/****   DECOR   ****/
+
+
+.grid{
+    width:21px;
+    height: 21px;
+    background-color: rgba(255,255,255,.2);
+    border-color: #D8E6EF;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.decorh{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1024px;
+    height: 69px;
+    margin-top: 100px;
+}
+
 body {
     height: 768px;
     width: 1024px;
@@ -30,8 +51,8 @@ body {
     background-color: #1E425C;
     border-radius: 50%;
     position: absolute;
-    left: 508px;
-    top: 181px;
+    left: 215px;
+    top: -38px;
     z-index: 1;
 }
 
@@ -46,7 +67,7 @@ h1 {
 
 .startbuttons{
     text-align: center;
-    margin-top: 323px;
+    margin-top: 290px;
 }
 
 button {
@@ -131,6 +152,7 @@ button:hover {
     font-weight: bold;
     border-style: none;
     margin-left: 0px;
+    margin-top: 0px;
     margin-bottom: 33px;
 }
 
