--- a/project2/assets/stylegame.css
+++ b/project2/assets/stylegame.css
@@ -8,6 +8,7 @@ body {
     background-color: #A6C2CE;
     height: 768px;
     width: 1024px;
+    margin: 0 auto;
 }
 
 /****   DECOR   ****/
@@ -29,6 +30,16 @@ body {
     height: 69px;
 }
 
+.decorv{
+    display: flex;
+    flex-wrap: wrap;
+    width: 69px;
+    height: 768px;
+    position: absolute;
+    z-index: -5;
+    margin-top: -16px;
+}
+
 /****  TITLE   ****/
 
 .sudoku{
@@ -46,11 +57,15 @@ body {
     background-color: #1E425C;
     border-radius: 50%;
     position: absolute;
-    left: 504px;
-    top: 47px;
+    left: 503px;
+    top: 32px;
     z-index: 1;
 }
 
+.head{
+    text-align: left;
+    position: relative;
+}
 .header {
     width:407px;
     height:37px;
@@ -109,7 +124,8 @@ body {
     z-index: 20;
     margin: 0 auto;
     padding: 0;
-    margin-left: -5px;
+/*    margin-left: -5px;*/
+    margin-top: -15px;
 }
 
 /*positions*/
@@ -345,6 +361,43 @@ button:hover {
     margin-left: 792px
 }
 
+
+/****   ANSWER KEY  ****/
+
+
+.analysis{
+    
+    margin-top: -440px;
+    position: absolute;
+    z-index:20;
+    top: 43px;
+    left: 148px;
+}
+
+#ak{
+    background-color: #D49B92;
+    height: 47px;
+    width: 181px;
+    font-size: 20px;
+    margin-left: 30px;
+    color: white;
+    font-weight: 600;
+    border-style: none;
+    text-align: center;
+    line-height: 45px
+}
+
+#ak:hover{
+    background-color: #1E425C;
+    cursor: pointer;
+}
+
+#easyak{
+    visibility: hidden;
+    position: absolute;
+    top: 203px;
+}
+
 /****   POP UP WINDOWS    ****/
 
 .blackout{
@@ -363,7 +416,7 @@ button:hover {
     width: 534px;
     height: 491px;
     background-color: #1E425C;
-    left: 245px;
+    margin: 0 auto;
     text-align: center;
     position: absolute;
     top: 139px;
@@ -371,6 +424,7 @@ button:hover {
     border: 3px solid #A6C2CE;
     color: white;
     font-size: 20px;
+    left: 30%;
 }
 
 .bar{
@@ -421,7 +475,7 @@ button:hover {
     color: white;
     background-color: #D49B92;
     float: right;
-    z-index: 60;
+    z-index: 80;
     
 }
 
@@ -436,6 +490,7 @@ button:hover {
     height: 100px;
 }
 
+/*
 #circle {
     width:20px;
     height: 20px;
@@ -446,6 +501,7 @@ button:hover {
 #circle:hover{
     background-color: #E9C101;
 }
+*/
 
 .buttonbottom {
     display: flex;
@@ -467,6 +523,29 @@ button:hover {
     visibility: hidden;
 }
 
+.arrow{
+    width: 50px;
+    height: 50px;
+    margin-left:  0px;
+    margin-top: 30px;
+    border-radius: 50%;
+    font-size: 30px;
+    align-content: center;
+    text-align:center;
+    display: inline-block;
+    padding: 8px 16px -10px;
+    margin-left: 440px;
+
+}
+
+.arrow:hover{
+    background-color: #E9C101;
+}
+
+.gif{
+    
+    margin-bottom: 40px;
+}
 
 /****   INSTRUCTIONS PAGE   ****/
 
@@ -496,8 +575,35 @@ button:hover {
 
 .rulesbox::-webkit-scrollbar-thumb {
     background-color: #E9C101;
-    border-radius: 10px;}
+    border-radius: 10px;
+}
 
+.strip{
+    width: 10px;
+    height: 391px;
+    background-color: #1E425C;
+    position: fixed;
+    margin-left: 585px;
+    top: 249px;
+}
+
+.striph1{
+    background-color: #1E425C;
+    width: 610px;
+    height: 10px;
+    position: absolute;
+    margin-top: -26px;
+    margin-left: -15px;
+}
+
+.striph2{
+    background-color: #1E425C;
+    width: 610px;
+    height: 10px;
+    position: absolute;
+    margin-top: 375px;
+    margin-left: -15px;
+}
 .buttonsinst{
     display: flex;
     flex-wrap: nowrap;
@@ -522,8 +628,31 @@ h3{
 }
 
 img{
-    display: inline-block;
+    display: block;
     align-content: center;
-    margin-left: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    
 }
 
+.arrow2{
+    width: 50px;
+    margin-left: 370px;
+    font-size: 30px;
+}
+
+.disclaimer{
+    font-size: 10px;
+    font-style: italic;
+    margin-top: 20px;
+}
+
+a{
+    color: white;
+}
+
+a:visited{
+    color: white;
+}
