--- a/project3/assets/styles.css
+++ b/project3/assets/styles.css
@@ -24,7 +24,7 @@ a:hover{
 body{
     background-color: #F7F6F4;
     font-family: 'Raleway', sans-serif;
-    color: #525252;
+    color: grey;
 }
 
 .header{
